Fikset async sletting av tags + refaktorering