@@ -22,7 +22,10 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import static java.util.Objects.nonNull;
 
 @Slf4j
 @Service
@@ -39,22 +42,16 @@ public class TagsHendelseslagerClient implements ClientRegister {
 
         if (!dollyPerson.getTags().isEmpty()) {
 
-            getPdlPersonidenter(List.of(dollyPerson.getHovedperson()))
-                    .map(idents -> tagsHendelseslagerConsumer.createTags(idents, dollyPerson.getTags()))
-                    .flatMap(Flux::from)
-                    .collectList()
-                    .subscribe();
-        }
-
-        if (progress.isPdl()) {
             dollyPersonCache.fetchIfEmpty(dollyPerson);
             tagsHendelseslagerConsumer.createTags(Stream.of(List.of(dollyPerson.getHovedperson()),
-                            dollyPerson.getPartnere(), dollyPerson.getForeldre(), dollyPerson.getBarn(),
-                            dollyPerson.getFullmektige(), dollyPerson.getVerger())
-                    .flatMap(Collection::stream)
-                    .toList(), List.of(Tags.DOLLY));
-            var status = tagsHendelseslagerConsumer.publish(List.of(dollyPerson.getHovedperson()));
-            log.info("Person med ident {} sendt fra hendelselager med status {}", dollyPerson.getHovedperson(), status);
+                                    dollyPerson.getPartnere(), dollyPerson.getForeldre(), dollyPerson.getBarn(),
+                                    dollyPerson.getFullmektige(), dollyPerson.getVerger())
+                            .flatMap(Collection::stream)
+                            .toList(), dollyPerson.getTags())
+                    .collectList()
+                    .subscribe(response -> log.info("Lagt til tag(s) {} for ident {}",
+                            dollyPerson.getTags().stream().map(Enum::name).collect(Collectors.joining(", ")),
+                            dollyPerson.getHovedperson()));
         }
     }
 
@@ -62,47 +59,47 @@ public class TagsHendelseslagerClient implements ClientRegister {
     public void release(List<String> identer) {
 
         try {
-            getPdlPersonidenter(identer)
-                    .map(idents -> tagsHendelseslagerConsumer.deleteTags(idents, Arrays.asList(Tags.values())))
-                    .subscribe(response -> log.info("Slettet tags for identer"));
+            pdlPersonConsumer.getPdlPersoner(identer)
+                    .filter(pdlPersonBolk -> nonNull(pdlPersonBolk.getData()))
+                    .map(PdlPersonBolk::getData)
+                    .map(PdlPersonBolk.Data::getHentPersonBolk)
+                    .flatMap(Flux::fromIterable)
+                    .filter(personBolk -> nonNull(personBolk.getPerson()))
+                    .map(person -> Stream.of(List.of(person.getIdent()),
+                                    person.getPerson().getSivilstand().stream()
+                                            .map(PdlPerson.Sivilstand::getRelatertVedSivilstand)
+                                            .filter(Objects::nonNull)
+                                            .toList(),
+                                    person.getPerson().getForelderBarnRelasjon().stream()
+                                            .map(PdlPerson.ForelderBarnRelasjon::getRelatertPersonsIdent)
+                                            .toList(),
+                                    person.getPerson().getForeldreansvar().stream()
+                                            .map(ForeldreansvarDTO::getAnsvarlig)
+                                            .filter(Objects::nonNull)
+                                            .toList(),
+                                    person.getPerson().getFullmakt().stream()
+                                            .map(FullmaktDTO::getMotpartsPersonident)
+                                            .filter(Objects::nonNull)
+                                            .toList(),
+                                    person.getPerson().getVergemaalEllerFremtidsfullmakt().stream()
+                                            .map(PdlPerson.Vergemaal::getVergeEllerFullmektig)
+                                            .map(PdlPerson.VergeEllerFullmektig::getMotpartsPersonident)
+                                            .filter(Objects::nonNull)
+                                            .toList(),
+                                    person.getPerson().getKontaktinformasjonForDoedsbo().stream()
+                                            .map(KontaktinformasjonForDoedsboDTO::getPersonSomKontakt)
+                                            .filter(Objects::nonNull)
+                                            .map(KontaktinformasjonForDoedsboDTO.KontaktpersonDTO::getIdentifikasjonsnummer)
+                                            .filter(Objects::nonNull)
+                                            .toList())
+                            .flatMap(Collection::stream)
+                            .distinct()
+                            .toList())
+                    .flatMap(idents -> tagsHendelseslagerConsumer.deleteTags(idents, Arrays.asList(Tags.values())))
+                    .subscribe(response -> log.info("Slettet fra TagsHendelselager"));
 
         } catch (RuntimeException e) {
             log.error("Feilet å slette tags for identer: {}", String.join(", ", identer));
         }
-    }
-
-    private Flux<List<String>> getPdlPersonidenter(List<String> identer){
-
-        return  pdlPersonConsumer.getPdlPersoner(identer)
-                .map(PdlPersonBolk::getData)
-                .map(PdlPersonBolk.Data::getHentPersonBolk)
-                .flatMap(Flux::fromIterable)
-                .map(person ->  Stream.of(List.of(person.getIdent()),
-                                person.getPerson().getSivilstand().stream()
-                                        .map(PdlPerson.Sivilstand::getRelatertVedSivilstand)
-                                        .filter(Objects::nonNull)
-                                        .toList(),
-                                person.getPerson().getForelderBarnRelasjon().stream()
-                                        .map(PdlPerson.ForelderBarnRelasjon::getRelatertPersonsIdent)
-                                        .toList(),
-                                person.getPerson().getForeldreansvar().stream()
-                                        .map(ForeldreansvarDTO::getAnsvarlig)
-                                        .toList(),
-                                person.getPerson().getFullmakt().stream()
-                                        .map(FullmaktDTO::getMotpartsPersonident)
-                                        .toList(),
-                                person.getPerson().getVergemaalEllerFremtidsfullmakt().stream()
-                                        .map(PdlPerson.Vergemaal::getVergeEllerFullmektig)
-                                        .map(PdlPerson.VergeEllerFullmektig::getMotpartsPersonident)
-                                        .filter(Objects::nonNull)
-                                        .toList(),
-                                person.getPerson().getKontaktinformasjonForDoedsbo().stream()
-                                        .map(KontaktinformasjonForDoedsboDTO::getPersonSomKontakt)
-                                        .filter(Objects::nonNull)
-                                        .map(KontaktinformasjonForDoedsboDTO.KontaktpersonDTO::getIdentifikasjonsnummer)
-                                        .toList())
-                        .flatMap(Collection::stream)
-                        .distinct()
-                        .toList());
     }
 }
